[package]
name          = "queen-io"
version       = "0.1.0"
license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "I/O library for Rust"
documentation = "https://docs.rs/queen-io"
homepage      = "https://github.com/mitum/queen-io"
repository    = "https://github.com/mitum/queen-io"
readme        = "README.md"
keywords      = ["io", "epoll", "event-loop"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
libc     = "0.2"
