[package]
name          = "queen-io"
version       = "0.6.0"
license       = "MIT"
authors       = ["danc <dangcheng@hotmail.com>"]
description   = "I/O library for Rust"
documentation = "https://docs.rs/queen-io"
homepage      = "https://github.com/danclive/queen-io"
repository    = "https://github.com/danclive/queen-io"
readme        = "README.md"
keywords      = ["io", "epoll", "event-loop"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

edition = "2018"

[dependencies]
libc     = "0.2"
indexmap = "1.5"
